# all_lab_python

./: lab1.py  lab2.py  lab3.py  lab4.1.py  lab4.2.py  lab5.py  lab6.py
lab10/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
lab7/: currencies.py  logger.py  solve_quadratic.py  test_lab7.py
lab7/logs/: currency.py  demo_stdout.py  demo_stringio.py
lab8/: Lab8_Report_Zatonskikh_P-3123.docx  README.md  myapp.py
lab9/: README.md  app.py  Отчет_ЛР9_Затонских_П-3123.docx
